--- a/public/v4/apps/ghost-arm64v8.yml
+++ b/public/v4/apps/ghost-arm64v8.yml
@@ -2,22 +2,23 @@ captainVersion: 4
 services:
     $$cap_appname:
         environment:
-            GHOST_DATABASE_NAME: ghost
-            GHOST_DATABASE_PASSWORD: $$cap_db_ghost_password
-            GHOST_DATABASE_USER: ghost
-            GHOST_EMAIL: $$cap_ghost_email
-            GHOST_HOST: $$cap_ghost_host
-            GHOST_PASSWORD: $$cap_ghost_password
-            GHOST_PROTOCOL: $$cap_ghost_protocol
-            GHOST_PORT_NUMBER: $$cap_ghost_port
-            MARIADB_HOST: srv-captain--$$cap_appname-db
-            MARIADB_PORT_NUMBER: '3306'
-            SMTP_FROM_ADDRESS: $$cap_ghost_smtp_from
-            SMTP_HOST: $$cap_ghost_smtp_host
-            SMTP_PASSWORD: $$cap_ghost_smtp_password
-            SMTP_PORT: $$cap_ghost_smtp_port
-            SMTP_SERVICE: $$cap_ghost_smtp_service
-            SMTP_USER: $$cap_ghost_smtp_user
+            url: $$cap_ghost_host
+            admin__url: $$cap_ghost_host_admin
+            database__client: mysql
+            database__connection__host: srv-captain--$$cap_appname-db
+            database__connection__port: '3306'
+            database__connection__database: ghost
+            database__connection__user: ghost
+            database__connection__password: $$cap_db_ghost_password
+            privacy__useRpcPing: false
+            mail__transport: "SMTP"
+            mail__options__host: $$cap_ghost_smtp_host
+            mail__options__auth__pass: $$cap_ghost_smtp_password
+            mail__options__port: $$cap_ghost_smtp_port
+            mail__options__service: $$cap_ghost_smtp_service
+            mail__options__auth__user: $$cap_ghost_smtp_user
+            mail__options__secureConnection: true
+            mail__from: $$cap_ghost_smtp_from
         image: arm64v8/ghost:$$cap_ghost_version
         restart: always
         volumes:
@@ -31,7 +32,13 @@ services:
             MARIADB_ROOT_PASSWORD: $$cap_db_password
             MARIADB_ROOT_USER: $$cap_db_user
             MARIADB_USER: ghost
-        image: arm64v8/mariadb:10.1
+
+            MYSQL_DATABASE: ghost
+            MYSQL_PASSWORD: $$cap_db_ghost_password
+            MYSQL_ROOT_PASSWORD: $$cap_db_password
+            MYSQL_ROOT_USER: $$cap_db_user
+            MYSQL_USER: ghost
+        image: arm64v8/mariadb:latest
         restart: always
         volumes:
             - $$cap_appname-mariadb-data:/bitnami
@@ -39,7 +46,7 @@ services:
             notExposeAsWebApp: 'true'
 caproverOneClickApp:
     variables:
-        - defaultValue: 2.38
+        - defaultValue: "latest"
           description: Check out their Docker page for the valid tags https://hub.docker.com/r/bitnami/ghost/tags
           id: $$cap_ghost_version
           label: Ghost Version
@@ -57,29 +64,15 @@ caproverOneClickApp:
           id: $$cap_db_ghost_password
           label: MariaDB Ghost password
           validRegex: /^(?=.*\d).{10,}$/
-        - defaultValue: youremail@example.com
-          description: Ghost application email, you will use it to login
-          id: $$cap_ghost_email
-          label: Ghost email
-          validRegex: /^([^\s^\/])+$/
-        - description: The admin password must be at least 10 characters, and at least one number and letter
-          id: $$cap_ghost_password
-          label: Ghost password
-          validRegex: /^(?=.*\d).{10,}$/
         - defaultValue: blog.example.com
           description: Enter the URL that is used to access your publication
           id: $$cap_ghost_host
           label: Ghost Host
           validRegex: /^([^\s^\/])+$/
-        - defaultValue: http
-          description: Protocol that you will be using
-          id: $$cap_ghost_protocol
-          label: Ghost Protocol
-          validRegex: /^([^\s^\/])+$/
-        - defaultValue: '80'
-          description: Port that you will be using
-          id: $$cap_ghost_port
-          label: Ghost Port
+        - defaultValue: blog.example.com/ghost
+          description: Enter the URL that is used to access your admin settings
+          id: $$cap_ghost_host_admin
+          label: Ghost Host Admin
         - defaultValue: GMail
           description: Ghost uses node mailer, check this docs https://docs.ghost.org/concepts/config/#mail
           id: $$cap_ghost_smtp_service
@@ -88,7 +81,7 @@ caproverOneClickApp:
           description: The STMP host you will be using
           id: $$cap_ghost_smtp_host
           label: STMP host
-        - defaultValue: '465'
+        - defaultValue: '587'
           description: The STMP port you will be using
           id: $$cap_ghost_smtp_port
           label: STMP port
