--- a/public/v4/apps/mongodb-arm64v8.yml
+++ b/public/v4/apps/mongodb-arm64v8.yml
@@ -32,7 +32,7 @@ caproverOneClickApp:
              After installation on CapRover, it will be available as srv-captain--YOUR_CONTAINER_NAME at port 27017 to other CapRover apps.
              Enter your MongoDB Configuration parameters and click on next. It will take about a minute for the process to finish.
         end: "MongoDB is deployed and available as srv-captain--$$cap_appname:27017 to other apps. For example with NodeJS: mongoose.connect('mongodb://srv-captain--$$cap_appname/mydatabase?authSource=admin', {userMongoClient: true});"
-    displayName: MongoDB
+    displayName: 'MongoDB - arm64v8'
     isOfficial: true
     description: MongoDB is a cross-platform document-oriented database program. Classified as a NoSQL database program
     documentation: Taken from https://hub.docker.com/r/mongo/
